--- a/package.json
+++ b/package.json
@@ -3,5 +3,11 @@
   "devDependencies": {
     "@nomicfoundation/hardhat-toolbox": "^4.0.0",
     "hardhat": "^2.19.4"
+  },
+  "dependencies": {
+    "@openzeppelin/upgrades-core": "^1.32.4",
+    "hardhat-deploy": "^0.11.45",
+    "prettier-plugin-solidity": "^1.3.1",
+    "web3": "^1.10.0"
   }
 }
