--- a/.prettierrc
+++ b/.prettierrc
@@ -5,7 +5,7 @@
       "options": {
         "printWidth": 150,
         "tabWidth": 2,
-        "singleQuote": true,
+        "singleQuote": false,
         "semi": true
       }
     }
