--- a/package.json
+++ b/package.json
@@ -2,10 +2,13 @@
   "name": "hardhat-project",
   "devDependencies": {
     "@nomicfoundation/hardhat-toolbox": "^4.0.0",
+    "@nomiclabs/hardhat-ethers": "^2.2.3",
+    "@openzeppelin/hardhat-upgrades": "^3.0.3",
+    "@openzeppelin/upgrades-core": "^1.32.4",
+    "ethers": "^5.7.2",
     "hardhat": "^2.19.4"
   },
   "dependencies": {
-    "@openzeppelin/upgrades-core": "^1.32.4",
     "hardhat-deploy": "^0.11.45",
     "prettier-plugin-solidity": "^1.3.1",
     "web3": "^1.10.0"
